# physics-engine

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp
examples/: ball_drop.cpp  constraints.cpp  stacking.cpp
include/: broadphase.h  collision.h  rigidbody.h  vector2.h  world.h
src/: broadphase.cpp  collision.cpp  rigidbody.cpp  vector2.cpp  world.cpp
tests/: test_collision.cpp  test_vector2.cpp  test_world.cpp
